# Vorb

./: .gitignore  .gitmodules  .travis.yml  AwesomiumInterface.h  AwesomiumInterface.inl  BlenderExporters.py  CMakeLists.txt  ComponentTable.hpp  ComponentTableBase.h  ConnectedTextures.h  DeferredShaders.h  DepsBuildCopy.bat  Directory.h  DoxygenDocs.bat  ECS.cpp  Entity.h  Events.hpp  File.cpp  File.h  FileStream.h  FixedSizeArrayRecycler.hpp  GBuffer.cpp  GBuffer.h  GLProgram.cpp  GLProgram.h  GLRPC.cpp  GLRPC.h  GameWindow.cpp  GameWindow.h  GpuMemory.cpp  GpuMemory.h  IOManager.cpp  IOManager.h  IThreadPoolTask.h  ImageIO.cpp  ImageIO.h  InputDispatcher.cpp  InputDispatcher.h  Keg.cpp  KeyboardEventDispatcher.h  (+61 more)
UnitTester/: Simple.hlsl  UnitTester.vcxproj  UnitTester.vcxproj.filters  main.cpp
UnitTester/data/: add.lua
UnitTests/: Button.cpp  Button.h  D3DGraphics.cpp  DelegateEvents.cpp  Example.cpp  Form.cpp  Form.h  Keg.cpp  Lua.cpp  OS.cpp  QD.cpp  TestClasses.h  Tests.cpp  Tests.h  Types.cpp  UIStyle.cpp  UIStyle.h  UIUtils.h  UnitTests.vcxproj  UnitTests.vcxproj.filters  Utils.cpp  Vorb.cpp  VorbCoreECS.cpp  VorbGraphics.cpp  VorbGraphicsDevices.cpp  VorbIO.cpp  VorbMath.cpp  VorbScript.cpp  VorbSound.cpp  VorbUI.cpp  VorbUtils.cpp  VorbVoxel.cpp  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h  app.rc  macros.h  stdafx.cpp  stdafx.h  (+1 more)
VS/: CurrentSettings.vssettings  RegrowthStyle.vssettings
VS/Snippets/: Doxygen.txt  DoxygenDocMethod.txt  DoxygenExample.txt  DoxygenFile.txt  VorbHeader.txt
cmake_files/: FindGLEW.cmake  FindGLM.cmake  FindOpenGL.cmake  FindSDL2_ttf.cmake  Findlodepng.cmake  components.cmake  cotire.cmake  deps.cmake  utils.cmake  vorb.cmake
doxygen/: main.md
doxygen/examples/: VorbArray.cpp  VorbKeg.h  VorbLibs.cpp  VorbPtrRecycler.cpp
include/: Asset.h  AssetLoader.h  Bitfields.inl  BufferUtils.inl  ComponentTableBase.h  Constants.h  Delegate.cpp  Delegate.hpp  Directory.h  Endian.h  Event.hpp  Events.hpp  Examples.h  FastConversion.inl  File.h  FixedSizeArrayRecycler.hpp  GpuMemory.h  Graphics.h  IDGenerator.h  IO.h  IOManager.h  IThreadPoolTask.h  ImageLoader.h  IntersectionUtils.hpp  IntersectionUtils.inl  Keg.h  KeyboardEventDispatcher.h  LuaDevConsole.h  MainGame.h  Matrix.h  Matrix.hpp  Matrix.inl  MeshGenerators.h  ModelIO.h  MouseInputDispatcher.h  MultipleComponentSet.h  Path.h  PtrRecycler.hpp  Quaternion.hpp  Quaternion.inl  (+41 more)
include/Vorb/: Any.hpp  Asset.h  AssetLoader.h  AssetLoader.inl  Constants.h  Delegate.hpp  Event.hpp  Events.hpp  FixedSizeArrayRecycler.hpp  Graphics.h  IDGenerator.h  IO.h  IThreadPoolTask.h  IndexSequence.hpp  IntersectionUtils.hpp  Matrix.hpp  MeshGenerators.h  PtrRecycler.hpp  Quaternion.hpp  RPC.h  Radix.inl  Random.h  RingBuffer.hpp  RingBuffer.inl  ScopedTiming.hpp  TextureRecycler.hpp  ThreadPool.h  ThreadPool.inl  ThreadSync.h  Timing.h  TypeManip.hpp  Vector.hpp  Vector.inl  Vorb.h  VorbAssert.hpp  VorbLibs.h  VorbMemory.h  VorbPreDecl.inl  colors.h  compat.h  (+9 more)
include/ecs/: BitTable.hpp  ComponentTable.hpp  ComponentTableBase.h  ECS.h  ECSSimpleUpdater.h  Entity.h  MultiComponentTracker.hpp  MultipleComponentSet.h
include/examples/: VorbArrayKeg.cpp  VorbEnumOps.cpp  VorbInit.cpp  VorbKeg.cpp
include/graphics/: AnimationData.h  Camera.h  ConnectedTextures.h  DeferredShaders.h  DepthState.h  Enums.h  Frustum.h  FullQuadVBO.h  GBuffer.h  GLEnums.h  GLProgram.h  GLRenderTarget.h  GLStates.h  GpuMemory.h  GraphicsContext.h  GraphicsDevice.h  IAdapter.h  IContext.h  IDevice.h  IObject.h  IRenderPipeline.h  IRenderStage.h  IResource.h  ImageIO.h  Mesh.h  MeshData.h  ModelIO.h  PostProcess.h  RTSwapChain.hpp  RasterizerState.h  RenderPipeline.h  Renderer.h  ResourceDescriptions.h  SamplerState.h  Scene.h  ShaderCommon.inl  ShaderInterface.h  ShaderManager.h  ShaderParser.h  SpriteBatch.h  (+8 more)
include/io/: Directory.h  File.h  FileOps.h  FileStream.h  IOManager.h  Keg.h  KegBasic.h  KegEnum.h  KegEnvironment.h  KegFuncs.h  KegType.h  KegTypes.h  KegValue.h  MemFile.h  Path.h  YAML.h  YAMLConverters.h  YAMLNode.h  YAMLReader.h  YAMLWriter.h
include/math/: BezierMath.hpp  FuncPreDecl.hpp  Matrix.h  Matrix.inl  MatrixMath.h  MatrixMath.hpp  Quaternion.h  QuaternionMath.hpp  TweeningMath.hpp  VectorMath.h  VectorMath.hpp  VorbMath.h  VorbMath.hpp
include/script/: Environment.h  Function.h  GraphicsScriptInterface.h  MathScriptInterface.h  REPL.h  Script.h  ScriptImpl.h  ScriptValueSenders.h
include/sound/: ISoundImpl.h  SoundEngine.h  SoundInstance.h  SoundListener.h  SoundResource.h
include/ui/: Button.h  ButtonBase.h  ButtonScriptFuncs.h  CheckBox.h  CheckBoxScriptFuncs.h  ComboBox.h  ComboBoxScriptFuncs.h  Control.h  Drawables.h  FocusController.h  Form.h  FormScriptEnvironment.h  GameWindow.h  GameWindowScriptFuncs.h  IButton.h  IGameScreen.h  IWidgetContainer.h  InputDispatcher.h  InputMapper.h  KeyStrings.h  KeyboardEventDispatcher.h  Keys.inl  Label.h  LabelScriptFuncs.h  LuaDevConsole.h  MainGame.h  MouseInputDispatcher.h  OSWindow.h  Panel.h  PanelScriptFuncs.h  ScreenList.h  ScriptedUI.h  Slider.h  SliderScriptFuncs.h  TextInputListener.hpp  UIRenderer.h  Widget.h  WidgetList.h  WidgetListScriptFuncs.h  WidgetScriptFuncs.h  (+2 more)
include/voxel/: BlockPack.h  Chunk.h  IntervalTree.h  IntervalTree.inl  SmartVoxelContainer.hpp  VoxCommon.h  VoxelMeshAlg.h  VoxelMesherCulled.h  VoxelTextureStitcher.h
make/: Makefile
make/tests/: Makefile
src/: ComponentTableBase.cpp  ConnectedTextures.cpp  DeferredShaders.cpp  Directory.cpp  File.cpp  FileOps.cpp  GLProgram.cpp  GpuMemory.cpp  IOManager.cpp  ImageLoader.cpp  ImplGraphicsH.inl  InputDispatcher.cpp  Keg.cpp  LuaDevConsole.cpp  MainGame.cpp  MeshGenIcosphere.cpp  ModelIO.cpp  MultipleComponentSet.cpp  RPC.cpp  Random.cpp  SoundEngine.cpp  SoundImpl.hpp  SoundImplFMOD.inl  SoundInstance.cpp  SoundListener.cpp  SoundResource.cpp  SpriteBatch.cpp  SpriteFont.cpp  TextureCache.cpp  Timing.cpp  Vorb.cpp  colors.cpp  os.h  stdafx.cpp  vorb_rpc.cpp
src/ecs/: ComponentTableBase.cpp  ECS.cpp  (+1 more)
tests/: CMakeLists.txt  main.cpp
(+399 files in other folders)
